--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "langchain>=1.2.3",
+    "pytest>=9.0.2",
+]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
