--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dvc>=3.66.1",
     "langchain>=1.2.3",
+    "langchain-community>=0.4.1",
+    "langchain-core>=1.2.7",
+    "mlflow>=3.8.1",
+    "pypdf>=6.6.0",
     "pytest>=9.0.2",
 ]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
 addopts = "-ra"
+
