--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "dvc>=3.66.1",
     "langchain>=1.2.3",
+    "langchain-chroma>=1.1.0",
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.7",
+    "langchain-ollama>=1.0.1",
     "mlflow>=3.8.1",
     "pypdf>=6.6.0",
     "pytest>=9.0.2",
